--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="13F1066" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wI0-Z4-0OB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wI0-Z4-0OB">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6736"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -212,13 +212,13 @@
                     </tableView>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" title="Треды" id="MEn-bw-bzK">
-                        <barButtonItem key="backBarButtonItem" title="Доска" id="opR-ed-Dki"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="compose" id="NQO-nl-fZ8">
                             <connections>
                                 <segue destination="wgF-au-dzt" kind="presentation" identifier="segueToNewThread" id="XRT-4w-L0S"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
                     <refreshControl key="refreshControl" opaque="NO" multipleTouchEnabled="YES" contentMode="center" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" id="TTY-hg-8b2">
@@ -429,7 +429,6 @@
                         </barButtonItem>
                     </toolbarItems>
                     <navigationItem key="navigationItem" title="Тред" id="iaG-NT-yBd">
-                        <barButtonItem key="backBarButtonItem" title="Тред" id="S5o-Hc-6kL"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="compose" id="tpv-GH-b3T">
                             <connections>
                                 <segue destination="wgF-au-dzt" kind="presentation" identifier="segueToNewPost" id="fFt-k5-qt1"/>
@@ -627,8 +626,8 @@
         <image name="Toppage" width="22" height="22"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="o55-Sb-BOJ"/>
-        <segue reference="fFt-k5-qt1"/>
         <segue reference="Iwy-TH-KYT"/>
+        <segue reference="XRT-4w-L0S"/>
+        <segue reference="Xk9-pa-bWO"/>
     </inferredMetricsTieBreakers>
 </document>
