--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -376,6 +376,13 @@
                                                 <action selector="showPostActions:" destination="3hz-5v-Niv" eventType="touchUpInside" id="9S4-Xe-Sam"/>
                                             </connections>
                                         </button>
+                                        <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Video" translatesAutoresizingMaskIntoConstraints="NO" id="yH4-O5-Yl8">
+                                            <rect key="frame" x="26" y="26" width="30" height="30"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="30" id="0Oy-4z-DNy"/>
+                                                <constraint firstAttribute="width" constant="30" id="heg-3M-hoz"/>
+                                            </constraints>
+                                        </imageView>
                                     </subviews>
                                     <constraints>
                                         <constraint firstItem="E2c-nb-XR8" firstAttribute="top" secondItem="M3z-Su-Ix2" secondAttribute="bottom" id="1tY-1b-awh"/>
@@ -385,11 +392,13 @@
                                         <constraint firstItem="E2c-nb-XR8" firstAttribute="top" relation="greaterThanOrEqual" secondItem="jQY-pz-yxx" secondAttribute="bottom" priority="999" id="NQE-s1-bmc"/>
                                         <constraint firstItem="M3z-Su-Ix2" firstAttribute="leading" secondItem="jQY-pz-yxx" secondAttribute="trailing" id="PJv-Nf-thQ"/>
                                         <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="jQY-pz-yxx" secondAttribute="bottom" priority="999" constant="8" id="UCH-FN-TD4"/>
+                                        <constraint firstItem="jQY-pz-yxx" firstAttribute="centerX" secondItem="yH4-O5-Yl8" secondAttribute="centerX" id="YA7-1m-tE3"/>
                                         <constraint firstItem="MIA-Cl-nhd" firstAttribute="top" secondItem="M3z-Su-Ix2" secondAttribute="bottom" id="cmI-mS-X68"/>
                                         <constraint firstAttribute="trailing" secondItem="M3z-Su-Ix2" secondAttribute="trailing" id="eTP-2U-wQ8"/>
                                         <constraint firstAttribute="bottom" secondItem="MIA-Cl-nhd" secondAttribute="bottom" id="fJL-bP-hcg"/>
                                         <constraint firstItem="MIA-Cl-nhd" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="lu6-fg-lI3" secondAttribute="leading" constant="100" id="fOI-Fp-MfD"/>
                                         <constraint firstItem="MIA-Cl-nhd" firstAttribute="centerY" secondItem="E2c-nb-XR8" secondAttribute="centerY" id="gMP-yb-XH5"/>
+                                        <constraint firstItem="jQY-pz-yxx" firstAttribute="centerY" secondItem="yH4-O5-Yl8" secondAttribute="centerY" id="k1h-Im-raC"/>
                                         <constraint firstAttribute="trailing" secondItem="MIA-Cl-nhd" secondAttribute="trailing" constant="8" id="li0-4X-Xcv"/>
                                         <constraint firstItem="jQY-pz-yxx" firstAttribute="top" secondItem="lu6-fg-lI3" secondAttribute="top" constant="8" id="z39-5l-9dG"/>
                                     </constraints>
@@ -402,6 +411,8 @@
                                     <outlet property="imageLeftConstraint" destination="K4S-vg-FxB" id="05S-Pw-2tT"/>
                                     <outlet property="imageWidthConstraint" destination="BBN-af-gX6" id="DBX-GP-T2i"/>
                                     <outlet property="postThumb" destination="jQY-pz-yxx" id="4OM-rw-ETE"/>
+                                    <outlet property="videoiconHeightContstraint" destination="0Oy-4z-DNy" id="v9C-gH-9Rd"/>
+                                    <outlet property="videoiconWidthContstraint" destination="heg-3M-hoz" id="fY4-Mq-cHn"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -624,10 +635,11 @@
         <image name="Refresh" width="22" height="22"/>
         <image name="Settings" width="22" height="22"/>
         <image name="Toppage" width="22" height="22"/>
+        <image name="Video" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="Iwy-TH-KYT"/>
-        <segue reference="XRT-4w-L0S"/>
+        <segue reference="fFt-k5-qt1"/>
         <segue reference="Xk9-pa-bWO"/>
     </inferredMetricsTieBreakers>
 </document>
