--- a/dvach-browser/Base.lproj/Main.storyboard
+++ b/dvach-browser/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wI0-Z4-0OB">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="wI0-Z4-0OB">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -420,7 +420,7 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ekp-o7-QBh">
                                 <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLY-YJ-MBR">
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RLY-YJ-MBR" userLabel="Container For Post Elements" customClass="DVBContainerForPostElements">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="250"/>
                                         <subviews>
                                             <textField opaque="NO" clipsSubviews="YES" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Тема" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wjr-Ih-9ju">
@@ -518,6 +518,18 @@
                                             <constraint firstItem="yu0-D0-p1U" firstAttribute="top" secondItem="R8v-6t-d37" secondAttribute="bottom" constant="15" id="sw6-YF-f5e"/>
                                             <constraint firstAttribute="trailing" secondItem="1dE-mf-Pvb" secondAttribute="trailing" constant="15" id="vME-SI-Coy"/>
                                         </constraints>
+                                        <connections>
+                                            <outlet property="activityIndicator" destination="jV2-RR-JBv" id="SlQ-1E-tfc"/>
+                                            <outlet property="captchaFieldHeight" destination="e9K-Tz-CJt" id="3c3-8c-13o"/>
+                                            <outlet property="captchaImage" destination="R8v-6t-d37" id="fXY-JK-Owf"/>
+                                            <outlet property="captchaUpdateButton" destination="ATw-LV-fb7" id="sa5-gZ-bhQ"/>
+                                            <outlet property="captchaValueTextField" destination="1dE-mf-Pvb" id="Dwj-Fe-tAD"/>
+                                            <outlet property="commentTextView" destination="yu0-D0-p1U" id="4l7-wo-4pd"/>
+                                            <outlet property="fromThemeToCaptchaField" destination="5W9-1b-OC8" id="LN4-El-kZt"/>
+                                            <outlet property="nameTextField" destination="cMi-uW-0S6" id="wp9-qJ-bcL"/>
+                                            <outlet property="subjectTextField" destination="wjr-Ih-9ju" id="NdT-Mr-QQs"/>
+                                            <outlet property="uploadButton" destination="Nvk-ge-8dV" id="UkC-bs-FYd"/>
+                                        </connections>
                                     </view>
                                 </subviews>
                                 <constraints>
@@ -563,18 +575,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="activityIndicator" destination="jV2-RR-JBv" id="lDi-oB-oC2"/>
-                        <outlet property="captchaFieldHeight" destination="e9K-Tz-CJt" id="Fwm-vj-uvP"/>
-                        <outlet property="captchaImage" destination="R8v-6t-d37" id="jIe-EV-f9b"/>
-                        <outlet property="captchaUpdateButton" destination="ATw-LV-fb7" id="cnI-P9-JgL"/>
-                        <outlet property="captchaValueTextField" destination="1dE-mf-Pvb" id="ior-9i-uy0"/>
-                        <outlet property="commentTextView" destination="yu0-D0-p1U" id="ctU-QD-blO"/>
+                        <outlet property="containerForPostElementsView" destination="RLY-YJ-MBR" id="Hsd-wI-uQL"/>
                         <outlet property="contstraintFromCommentTextToBottomEdge" destination="PDL-6o-h6j" id="hEp-Sj-NrX"/>
                         <outlet property="createPostScrollView" destination="ekp-o7-QBh" id="NpC-AA-44V"/>
-                        <outlet property="fromThemeToCaptchaField" destination="5W9-1b-OC8" id="PIk-Rx-DDD"/>
-                        <outlet property="nameTextField" destination="cMi-uW-0S6" id="bGo-OD-1I4"/>
-                        <outlet property="subjectTextField" destination="wjr-Ih-9ju" id="Dui-T0-Gtf"/>
-                        <outlet property="uploadButton" destination="Nvk-ge-8dV" id="4HI-BS-pFV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="efi-dv-5Xt" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -589,8 +592,8 @@
         <image name="Video" width="30" height="30"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="o55-Sb-BOJ"/>
         <segue reference="fFt-k5-qt1"/>
-        <segue reference="xwW-TO-L0b"/>
+        <segue reference="o55-Sb-BOJ"/>
+        <segue reference="Iwy-TH-KYT"/>
     </inferredMetricsTieBreakers>
 </document>
